--- a/etsy_clone/main/templates/header.html
+++ b/etsy_clone/main/templates/header.html
@@ -3,47 +3,59 @@
     <div class="d-flex justify-content-between align-items-center w-100 px-4 py-2">
       <a class="navbar-brand fw-bold fs-4 text-orange" href="/">Etsy Clone</a>
 
-      {% if user.is_authenticated and user.is_buyer %}
-  <form class="d-flex mx-auto" action="{% url 'search_products' %}" method="get" style="width: 40%;">
-    <div class="input-group">
-      <input type="search" name="q" class="form-control rounded-start-pill" placeholder="Search products..." aria-label="Search">
-      <button class="btn btn-outline-success rounded-end-pill" type="submit">Search</button>
-    </div>
-  </form>
-{% endif %}
+      {% if not user.is_seller %}
+      <div class="d-flex mx-auto align-items-center" style="width: 40%;">
+        <div class="dropdown me-2">
+          <button class="btn btn-outline-secondary rounded-circle d-flex align-items-center justify-content-center" type="button" data-bs-toggle="dropdown" aria-expanded="false" style="width: 38px; height: 38px;">
+            <i class="bi bi-list fs-4"></i>
+          </button>
+          <ul class="dropdown-menu">
+            {% for category in categories %}
+              <li><a class="dropdown-item" href="{% url 'category_products' category.slug %}">{{ category.name }}</a></li>
+            {% endfor %}
+          </ul>
+        </div>
+        <form class="flex-grow-1" action="{% url 'search_products' %}" method="get">
+          <div class="input-group">
+            <input type="search" name="q" class="form-control rounded-start-pill" placeholder="Search products..." aria-label="Search">
+            <button class="btn btn-outline-success rounded-end-pill" type="submit">Search</button>
+          </div>
+        </form>
+      </div>
+      {% endif %}
 
 
       <div>
         <ul class="navbar-nav d-flex flex-row gap-3">
           {% if user.is_authenticated %}
             {% if user.is_seller %}
-                <li class="nav-item"><a class="nav-link" href="{% url 'seller_dashboard' %}">📈 Dashboard</a></li>
-                <li class="nav-item"><a class="nav-link" href="{% url 'my_shop' %}">My Shop</a></li>
+                <li class="nav-item"><a class="nav-link" href="{% url 'seller_dashboard' %}" title="Home"><i class="bi bi-house-door"></i></a></li>
+                <li class="nav-item"><a class="nav-link" href="{% url 'my_shop' %}" title="My Shop"><i class="bi bi-shop"></i></a></li>
                 <li class="nav-item">
-                    <a class="nav-link" href="{% url 'seller_orders' %}">📦 My Orders</a>
+                    <a class="nav-link" href="{% url 'seller_orders' %}" title="My Orders"><i class="bi bi-box-seam"></i></a>
                 </li>
             {% endif %}
             {% if user.is_buyer %}
-                <li class="nav-item"><a class="nav-link" href="{% url 'landing' %}">Home</a></li>
+                <li class="nav-item"><a class="nav-link" href="{% url 'landing' %}" title="Home"><i class="bi bi-house-door"></i></a></li>
                 <li class="nav-item">
-                <a class="nav-link" href="{% url 'view_cart' %}">
-                🛒 Cart ({{ cart_count }})
+                <a class="nav-link" href="{% url 'view_cart' %}" title="Cart">
+                <i class="bi bi-cart"></i> ({{ cart_count }})
                 </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="{% url 'view_wishlist' %}">
-                ❤️ Wishlist ({{ wishlist_count }})
+                    <a class="nav-link" href="{% url 'view_wishlist' %}" title="Wishlist">
+                <i class="bi bi-heart"></i> ({{ wishlist_count }})
                 </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="{% url 'view_orders' %}">📦 My Orders</a>
+                    <a class="nav-link" href="{% url 'view_orders' %}" title="My Orders"><i class="bi bi-box2-heart"></i></a>
                 </li>
             {% endif %}
-                <li class="nav-item"><a class="nav-link" href="{% url 'inbox' %}">💬 Messages</a></li>
-            <li class="nav-item"><a class="nav-link" href="{% url 'logout' %}">Logout</a></li>
+                <li class="nav-item"><a class="nav-link" href="{% url 'inbox' %}" title="Messages"><i class="bi bi-chat-dots"></i></a></li>
+            <li class="nav-item"><a class="nav-link" href="{% url 'logout' %}" title="Logout"><i class="bi bi-box-arrow-right"></i></a></li>
           {% else %}
-            <li class="nav-item"><a class="nav-link" href="{% url 'login' %}">Login</a></li>
-            <li class="nav-item"><a class="nav-link" href="{% url 'register' %}">Sign Up</a></li>
+            <li class="nav-item"><a class="nav-link" href="{% url 'login' %}" title="Login"><i class="bi bi-box-arrow-in-right"></i></a></li>
+            <li class="nav-item"><a class="nav-link" href="{% url 'register' %}" title="Sign Up"><i class="bi bi-person-plus"></i></a></li>
           {% endif %}
         </ul>
       </div>
